EB-2004-05-04-1: Bugfix:    qrsh <command> jobs are not scheduled to 
                            interactive queue
                 Changed:   sge_schedd
                 Issue:     855
                 Review:    JG

JG-2004-05-04-1: Bugfix:    Removed debug output to stderr from qstat/qhost.

JG-2004-05-04-0: Enhancem.: spooldefaults handles additional objects required 
                            for the update procedure (adminhosts, calendars, 
                            ckpts, cqueues, exechosts, projects, submithosts, 
                            users)
                 Review:    MD 

EB-2004-05-04-0: Bugfix:    qstat -g c slot counting broken
                 Changed:   qstat, qmon
                 Issue:     975
                 Review:    SG 

CR-2004-05-03-1: Enhancem.: o modified code to speed up connection establishment
                 Changed:   commlib

CR-2004-05-03-0: Enhancem.: o cl_commlib_receive_message() is now only
                              triggered, when a new message for the application
                              is ready for read.
                 Changed:   commlib
                 Review:    SG

SG-2004-05-03-0: Enhancem.: changed the order in the order package that is send
                            from the scheduler to the qmaster.
                 Changed:   scheduler
                 Review:    AH

SG-2004-05-03-0: Bugfix:    fixed a bug in the mirror interface, which did 
                            accept events, after the client shutdown event. 
                            This let to one error message per event. 
                            The real fix needs to be done in the event master.
                 Changed:   scheduler
                 Review:    JG

JG-2004-05-03-1: Testsuite: Fixed test system_tests/clients/qmod/reschedule
                            (fails due to IZ 999).

JG-2004-05-03-0: Enhancem.: Optimization of hashtables.
                 Review:    SG
