@@ -45,7 +45,7 @@ global CHECK_HOST              ;# hostname of this system (e.g. DWAIN)
 global check_name check_description check_needs check_functions check_errno check_errstr 
 global check_category
 set check_name         "qalter"
-set check_category     "COMPATIBILITY SYSTEM L10N"
+set check_category     "COMPATIBILITY SYSTEM L10N VERIFIED"
 set check_description(0)  "check every option"
 set check_needs        "init_core_system"       ;# dependencies of this check (name of other check)
 set check_functions ""
