@@ -1,3 +1,9 @@
+JG-2004-05-05-0: Testsuite: Verified tests bugs/issuezilla/171, 
+                            bugs/issuezilla/403, functional/migration, 
+                            system_tests/clients/qalter.
+                            Fixed call of qdel -u "*".
+                            Increased timeouts for qmaster shutdown.
+
 EB-2004-05-04-1: Bugfix:    qrsh <command> jobs are not scheduled to 
                             interactive queue
                  Changed:   sge_schedd
